# textx-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-and-run-tests-debug.sh  build-and-run-tests.sh  notes.txt
.cache/clangd/index/: aoc2021d2a.cpp.BCB9179ABEBC3379.idx  aoc2021d2b.cpp.33DB8BB97703B323.idx  arpeggio.cpp.0F736B1214DCB5F3.idx  arpeggio.h.93CC0695D08CB70B.idx  arpeggio.t.cpp.E4943894AD728625.idx  assert.h.6E8273E316FB79D8.idx  entity.t.cpp.39B7BBE285648687.idx  exceptions.t.cpp.C51162E69F2F8F3A.idx  export.cpp.34BFA0DD8A9D67AA.idx  export.h.0FA7DAA5D1E3F552.idx  grammar.h.89C9C4BF59FBC0B3.idx  istrings.cpp.94B968DEC1960F20.idx  istrings.h.92AD2329E67D7BEF.idx  istrings.t.cpp.FF12E743E45F01C0.idx  json.t.cpp.F11F8308CA7EABD1.idx  lang.cpp.3907CE36D9C43A88.idx  lang.h.24A9C1AA2110AEAC.idx  lang.t.cpp.8F4ECDF2BACA39E3.idx  main.cpp.96E2EFE66A69BDE5.idx  main.cpp.BF8FC3A743B81D61.idx  main.cpp.F336012F82035FF0.idx  metamodel.cpp.35957125A46A6788.idx  metamodel.h.A2745CF3774580F6.idx  metamodel.t.cpp.99D222F9CC851C8B.idx  mgrep.cpp.DE6360CF07AF0271.idx  mgrep.h.D7DAF8DDEDC4FB23.idx  mgrep.t.cpp.6F977EDF9EA3900F.idx  model.cpp.C1DACC24CD42AABE.idx  model.h.F8A774D68544C905.idx  model.t.cpp.D53CF40D341BE7FB.idx  multi_metamodel.t.cpp.D7F19158CA0C4998.idx  object.cpp.DC1FCEB9EB121AD8.idx  object.h.1C7E064FD7DD4664.idx  pyflies.t.cpp.6DBB681F97EF7CC1.idx  rrel.cpp.55AD639E8BE0DCEC.idx  rrel.h.2B4996D99BF61CA6.idx  rrel.t.cpp.B64A12664E98B43E.idx  rule.cpp.E36ACEE6BA85527F.idx  rule.h.E6D8367C2E61B57F.idx  scoping.cpp.D20610572BDE75DB.idx  (+9 more)
.devcontainer/: Dockerfile  build_deno_cache_from_project_root.sh  build_vscode_cache_from_project_root.sh  devcontainer.json
.github/workflow/: compile_and_test.yml
.github/workflows/: c-cpp.yml
cmake/modules/: Version.cmake  version.cpp.in
doc/images/: ownership.pu
examples/: aoc2021d2a.cpp  aoc2021d2b.cpp  coro0.cpp  example1.cpp  recursive_dir_gen.cpp
examples/itemlang/: demo0.py  demo0.ts  itemlang.cpp  main.cpp  run_demo0.sh  simple.eta
examples/itemlang/model/: big_example.item  example.item  simple.item
examples/itemlang/src/: itemlang.cpp  itemlang.h  main.cpp
examples/itemlang/test/: itemlang.t.cpp
examples/mgrep/: README.md  main.cpp
examples/mgrep/src/: mgrep.cpp  mgrep.h
examples/mgrep/test/: mgrep.t.cpp
integration_tests/json_export/: demo0.ts  run_demo0.sh
ref/: big_model.py
src/textx/: arpeggio.cpp  arpeggio.h  assert.h  export.cpp  export.h  fstrings.cpp  fstrings.h  grammar.h  istrings.cpp  istrings.h  lang.cpp  lang.h  metamodel.cpp  metamodel.h  model.cpp  model.h  object.cpp  object.h  parsetree.cpp  parsetree.h  rrel.cpp  rrel.h  rule.cpp  rule.h  scoping.cpp  scoping.h  textx_grammar_parsetree.cpp  textx_grammar_parsetree.del.h  textx_grammar_parsetree.h  tools.h  utils.h  version.h  workspace.cpp  workspace.h
test/: arpeggio.t.cpp  big_model.cpp  fstrings.t.cpp  incomplete_models.cpp  istrings.t.cpp  lang,t.cpp  lang.parse_item_lang_example.t.cpp  lang.t.cpp  main.cpp  metamodel.t.cpp  model.t.cpp  multi_metamodel.t.cpp  rrel.t.cpp  scoping.t.cpp
test/exceptions/: broken.model  broken.tx  exceptions.t.cpp  importer.model  metamodel.tx
test/from_py_version/examples/Entity/: entity.t.cpp  entity.tx
test/from_py_version/examples/StateMachine/: state_machine.t.cpp
test/from_py_version/examples/json/: json.t.cpp
test/from_py_version/examples/pyflies/: order_changed_of_optional_element_in_unordered_group.pf  pyflies.t.cpp  pyflies.tx
test/multi_metamodel/metamodel_provider3/: A.tx  B.tx  Base.tx  C.tx  Simple.tx  SimpleBase.tx  SimpleBaseBase.tx
test/multi_metamodel/referenced_metamodel/: Data.tx  Flow.tx  Types.tx
test/rrel/components/: ComponentsRrel.tx  example_A.components  example_B.components
test/rrel/example0/: Grammar.tx  navigation0.model
test/simple_importURI/: a.model  b.model  c.model  d.model  simple_importURI.t.cpp
typescript_tools/ref_resolver/: mod.ts
